--- a/Rózsahegyi Ákos/JS/tizenotodik_resz/index.html
+++ b/Rózsahegyi Ákos/JS/tizenotodik_resz/index.html
@@ -2,7 +2,7 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript tizenötödik</title>
+    <title>JavaScript tizennegyedik</title>
 </head>
 
 <body>
