--- a/Szabó Levente Tamás/js/javascript/10/tizedik.html
+++ b/Szabó Levente Tamás/js/javascript/10/tizedik.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="hehe/sajtos.jpg" type="image/x-icon">
-    <title>hetedik</title>
+    <title>tizedik</title>
 </head>
 <body>
     <style>
@@ -16,6 +16,6 @@
     </style>
     <h1><a href="https://www.youtube.com/watch?v=oSlx6k_KTCE">Here kitty, you can has cheesburger</a></h1>
     <img src="hehe/sajtos.jpg" alt="Here kitty, you can has cheesburger" width="800px">
-    <script src="hetedik.js"></script>
+    <script src="tizedik.js"></script>
 </body>
-</html>
+</html> 
