--- a/Sarkadi Kristóf Stefán/web/js37/index.html
+++ b/Sarkadi Kristóf Stefán/web/js37/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Objetumok és fügvények</h1>
-    <script src="odj32.js"></script>
+    <script src="obj37.js"></script>
 </body>
 </html>
