--- a/Simon Roland/java/koltsegvetes-js-projekt 52/index.html
+++ b/Simon Roland/java/koltsegvetes-js-projekt 52/index.html
@@ -42,7 +42,7 @@
                 <div class="hozzaad__kontener">
                     <select class="hozzaad__tipus">
                         <option value="bev" selected>+</option>
-                        <option value="kiad">-</option>
+                        <option value="kia">-</option>
                     </select>
                     <input type="text" class="hozzaad__leiras" placeholder="Leírás hozzáadása">
                     <input type="number" class="hozzaad__ertek" placeholder="Érték">
