--- a/Szabó Levente Tamás/js/jsprojekt/lmth.html
+++ b/Szabó Levente Tamás/js/jsprojekt/lmth.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="hette/gd.jpg" type="image/x-icon">
     <title>guba</title>
 </head>
 <script src="app3.js"></script>
