--- a/Rózsahegyi Ákos/JS/js-tanfolyam73/index.html
+++ b/Rózsahegyi Ákos/JS/js-tanfolyam73/index.html
@@ -5,8 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <title>JavaScript Projekt</title>
+
+    <style>
+        .doboz {
+            width: 200px;
+            padding: 60px;
+            text-align: center;
+            font-size: 30px;
+            margin-top: 50px;
+        }
+
+        .zold {background-color: green;}
+        .kek {background-color: dodgerblue;}
+        .narancs {background-color: orangered;}
+    </style>
 </head>
 <body>
+    <h1>ES6 / ES2015</h1>
+
+    <div class="doboz zold">Zöld vagyok</div>
+    <div class="doboz kek">Kék vagyok</div>
+    <div class="doboz narancs">Narancs vagyok</div>
+
     <script src="js/app.js"></script>
 </body>
 </html>
