--- a/Szabó Levente Tamás/js/jsprojekt/lmth.html
+++ b/Szabó Levente Tamás/js/jsprojekt/lmth.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="he.css">
     <link rel="shortcut icon" href="hette/gd.jpg" type="image/x-icon">
     <title>guba</title>
 </head>
-<script src="app3.js"></script>
+<script src="app6.js"></script>
 <body>
-    <h1>:)</h1>
-    <img src="hette/gd.jpg" alt=":)">
+    <h1 class="zold">Zöld</h1>
+    <h1 class="kek">Kék</h1>
+    <h1 class="orang">Narancs</h1>
 </body>
 </html>
