--- a/Szabó Levente Tamás/js/jsprojekt/lmth.html
+++ b/Szabó Levente Tamás/js/jsprojekt/lmth.html
@@ -7,10 +7,10 @@
     <link rel="shortcut icon" href="hette/gd.jpg" type="image/x-icon">
     <title>guba</title>
 </head>
-<script src="app6.js"></script>
+<script src="js/app7.js"></script>
 <body>
-    <h1 class="zold">Zöld</h1>
-    <h1 class="kek">Kék</h1>
-    <h1 class="orang">Narancs</h1>
+    <h1 class="zold" class="rectangle">Zöld</h1>
+    <h1 class="kek" class="rectangle">Kék</h1>
+    <h1 class="orang" class="rectangle">Narancs</h1>
 </body>
 </html>
