--- a/Roben Rómeó/js/js70/index.html
+++ b/Roben Rómeó/js/js70/index.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
 <html lang="hu">
-    <head>
-        <meta charset="UTF-8">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600" rel="stylesheet" type="text/css">
-        <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
-        <link type="text/css" rel="stylesheet" href="css/style.css">
-        <title>js project</js></title>
-    </head>
-    <body>
-        <header>
-            <script src="js/app.js"></script>
-        </header>       
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>téglalap</title>
+    <style>
+        .rectangle {
+            width: 100px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 14px;
+            font-weight: bold;
+            margin: 30px;
+            
+        }
+        .green{
+            background-color: green;
+            color: white;
+        }
+        .blue{
+            background-color: blue;
+            color: white;
+        }
+        .orange{
+            background-color: orange;
+            color: white;
+        }
+    </style>
+</head>
+<body>
+    <h1>
+        Taki
+    </h1>
+    <div class="rectangle green">zöld</div>
+    <div class="rectangle blue">kék</div>
+    <div class="rectangle orange">nari</div>
+
+    <script src="js/app.js"></script>
+    
+</body>
 </html>
