--- a/Szabó Levente Tamás/js/jsprojekt/lmth.html
+++ b/Szabó Levente Tamás/js/jsprojekt/lmth.html
@@ -7,10 +7,10 @@
     <link rel="shortcut icon" href="hette/gd.jpg" type="image/x-icon">
     <title>guba</title>
 </head>
-<script src="js/app7.js"></script>
 <body>
-    <h1 class="zold" class="rectangle">Zöld</h1>
-    <h1 class="kek" class="rectangle">Kék</h1>
-    <h1 class="orang" class="rectangle">Narancs</h1>
+    <div class="rectangle" style="background-color: green;">Zöld</div>
+    <div class="rectangle" style="background-color: blue;">Kék</div>
+    <div class="rectangle" style="background-color: orange;">Narancs</div>
+    <script src="js/app10.js"></script>
 </body>
 </html>
