--- a/Szabó Levente Tamás/js/jsprojekt/lmth.html
+++ b/Szabó Levente Tamás/js/jsprojekt/lmth.html
@@ -11,6 +11,6 @@
     <div class="rectangle" style="background-color: green;">Zöld</div>
     <div class="rectangle" style="background-color: blue;">Kék</div>
     <div class="rectangle" style="background-color: orange;">Narancs</div>
-    <script src="js/app10.js"></script>
+    <script src="js/otthoni3.js"></script>
 </body>
 </html>
